--- a/templates/seeDelivery.html
+++ b/templates/seeDelivery.html
@@ -321,6 +321,9 @@ li{
                             <input type="hidden" name="CourseName" value="{{ CourseName }}">
                             <input type="hidden" name="code" value="{{ code }}">
                             <input type="hidden" name="detail" value="{{ detail }}">
+                            <input type="hidden" name="email" value="{{ email }}">
+                            <input type="hidden" name="nameActivity" value="{{ nameActivity }}">
+                            <input type="hidden" name="nameExercise" value="{{ nameExercise }}">
                             <button  class= "primary-button-right" type="submit">Ejecutar Codigo</button>
                             <div class="menu_teacher_left">
                                         <h2 class="title">Resultado:</h2>
