Vistas nuevas listas

--- a/templates/CreateExercise.html
+++ b/templates/CreateExercise.html
@@ -63,7 +63,7 @@
             margin-top: 16px;
         }
         .input{
-            color: var(--black);
+            color: var(--black) !important;
             background-color: var(--gray);
             border-radius: 12px;
             height: 36px;
