--- a/templates/StudentRegistration.html
+++ b/templates/StudentRegistration.html
@@ -59,7 +59,7 @@
             margin-top: 16px;
         }
         .input{
-            color: var(--black);
+            color: var(--black)!important;
             background-color: var(--gray);
             border-radius: 12px;
             border: none;
