--- a/templates/editCourse.html
+++ b/templates/editCourse.html
@@ -54,7 +54,7 @@
             flex-direction: column;
         }
         .input{
-            color: var(--black);
+            color: var(--black) !important;
             background-color: var(--gray);
             border-radius: 12px;
             border: none;
