--- a/templates/CreateExercise.html
+++ b/templates/CreateExercise.html
@@ -124,11 +124,16 @@
     </style>
 </head>
 <body>
-        <div class="notification">
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         {% if message %}
-        <p>{{ message }}</p>
+            {% if message.strip() %}
+                <script>
+                    Swal.fire({
+                        title: "{{ message }}"
+                    });
+                </script>
+            {% endif %}
         {% endif %}
-    </div>
     <div class="create-exercise">
         <div class="form_container">
             <img src="{{ url_for('static', filename='Banner.jpg') }}"  alt="logo" class="logo">
