--- a/templates/SelectCourseView.html
+++ b/templates/SelectCourseView.html
@@ -123,41 +123,34 @@ li{
 
 
 
-        
-        
+
+
         .form-add {
     display: flex;
     flex-direction: column;
         }
-        
-    
-    
+
+
+
 
     a{text-decoration: none;
     color: var(--black);
     font-size: var(--lg);}
 
-                .notification{
-            color: var(--blue);
-            background-color: white;
-            font-size: var(--lg);
-            display: flex;
-            justify-content: center;
-            border-radius: 16px;
-            margin: 12px 12px 0 4px;
-            justify-self: center;
-
-
-        }
 
     </style>
 </head>
 <body>
-    <div class="notification">
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         {% if message %}
-        <p>{{ message }}</p>
+            {% if message.strip() %}
+                <script>
+                    Swal.fire({
+                        title: "{{ message }}"
+                    });
+                </script>
+            {% endif %}
         {% endif %}
-    </div>
     <div class="menu_teacher_left">
         <img src="{{ url_for('static', filename='Banner.jpg') }}"  alt="logo" class="logo">
         <h1 class="title">Cursos</h1>
